Convert abundanceRate  string to integer
